plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.11'
    id "com.diffplug.spotless" version "6.3.0"
}

application {
    applicationDefaultJvmArgs = ['-Xmx4g',
                                 '-Xms1g',
                                 '--add-opens', 'javafx.graphics/com.sun.javafx.tk=jogamp.fat',
                                 '--add-opens', 'javafx.graphics/javafx.stage=jogamp.fat',
                                 '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=jogamp.fat',
                                 '--add-opens', 'javafx.graphics/com.sun.glass.ui=jogamp.fat']
}

repositories {
    mavenCentral()
}

javafx {
    version = "17"
    modules = [ 'javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics' ]
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

dependencies {
    // JUnit
    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'

    // Java OpenGL
    implementation files('lib/jars/jogamp-fat.jar')

    // Parallel file compression
    implementation files('lib/jars/parallelgzip-1.0.6.jar')

    // Common utilities
    implementation 'org.apache.commons:commons-compress:1.21'

    // Polygon Triangulation
    implementation 'io.github.earcut4j:earcut4j:2.2.2'

    // JavaFX
    implementation 'org.openjfx:javafx-base:0.0.11:win'
    implementation 'org.openjfx:javafx-base:0.0.11:mac'
    implementation 'org.openjfx:javafx-base:0.0.11:linux'
    implementation 'org.openjfx:javafx-controls:0.0.11:win'
    implementation 'org.openjfx:javafx-controls:0.0.11:mac'
    implementation 'org.openjfx:javafx-controls:0.0.11:linux'
    implementation 'org.openjfx:javafx-fxml:0.0.11:win'
    implementation 'org.openjfx:javafx-fxml:0.0.11:mac'
    implementation 'org.openjfx:javafx-fxml:0.0.11:linux'
    implementation 'org.openjfx:javafx-graphics:0.0.11:win'
    implementation 'org.openjfx:javafx-graphics:0.0.11:mac'
    implementation 'org.openjfx:javafx-graphics:0.0.11:linux'
}

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'application.Main'
}

tasks.named('test') {
    useJUnitPlatform()
}

spotless {
    java {
        // use the default importOrder configuration
        importOrder()

        removeUnusedImports()

        googleJavaFormat()
        indentWithTabs(2)
        indentWithSpaces(4)
        trimTrailingWhitespace()
        endWithNewline()
    }
}
